--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
+
 {
-  "name": "crypto-snakes",
-  "version": "1.0.0",
+  "name": "snakes-and-ladders-full-realistic",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "start": "next start -p 3000"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.2.0"
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@farcaster/miniapp-sdk": "*"
   }
 }
